# eurostat-data-pipeline

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
eurostat_dbt/: dbt_project.yml
eurostat_dbt/models/staging/: _sources.yml  stg_housing.sql  stg_inflation.sql
scripts/: ingest_data.py
src/: config.py
src/ingestion/: eurostat.py
